# SlabRobot

./: .clang-format  .gitignore  .gitmodules  README.md  autoformat.sh  bom.ods  ctypes_test.py  gamepad_udp.py  opt.py  requirements.txt  sim.py  test.py
controller/: CMakeLists.txt
controller/include/: math_utils.h  msg_defs.h  mxgen.h  slab_controller.h
controller/src/: slab_controller.c
firmware/: README.md  coredump.sh  idf.sh  serial_json.py  serial_json_udp.py
firmware/esp32_app/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig
firmware/esp32_app/components/: I2Cdev  MPU6050  odrive_can_espidf
firmware/esp32_app/components/controller/: CMakeLists.txt  component.mk  include  src
firmware/esp32_app/components/esp32-ps3/: CMakeLists.txt  esp32-ps3
firmware/esp32_app/components/libslab/: CMakeLists.txt  include  src
firmware/esp32_app/main/: CMakeLists.txt  MPU6050_DMP.cpp  main.c  main.cpp  mpu6050_dmp.cpp  odrive_can.c  odrive_can.h
libslab/: CMakeLists.txt
libslab/include/: math_utils.h  msg_defs.h  slab.h
libslab/src/: py_lib.c  slab.c
model/: opt.py  slab.py
model/test/: dae_multiple_shooting.py
odrive/: BDUAV6384.json  BDUAV6384_legs.json  README.md  hub-config.json  odrive_setup.md  odrv_b.json  odrv_c.json  print_json.py
urdf/: body.part  body.stl  config.json  leg.part  leg.stl  robot.urdf  robotf.urdf  wheel.part  wheel.stl
